--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@ html, body {
   height: 100%;
   margin: 0;
   padding: 0;
+  
 }
 
 .container {
@@ -10,30 +11,39 @@ html, body {
 #map {
   bottom:0px;
   height: 100%;
-  left: 362px;
+  left: 322px;
   position: absolute;
   right: 0px;
 }
 
+#searchInArea {
+  color: #ffffff;
+  background-color: #000000;
+  width: 80px;
+  height: 30px;
+}
 .info-box {
-  background: #008080;
-  border: 1px solid #999;
+  background: #C9D7BD;
+  border: 8px solid #F7F6F7;
   border-radius: 3px;
   height: 100%;
   line-height: 35px;
   padding: 10px 10px 30px 10px;
   text-align: left;
-  width: 340px;
+  width: 285px;
 }
 #searchInAreaText {
   width: 200px;
+  height: 30px;
 }
 
 #resultList {
-  width: 300px;
+  width: 230px;
   height: 500px;
+  border-radius: 5px;
+  border: 8px solid #F7F6F7;
   overflow: scroll;
-  background-color: #20B2AA;
+  background-color: #F1F0EB;
 }
 
 ul {
