--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,11 @@ html, body {
      height: 100%;
      margin: 0;
      padding: 0;
+     font-family: 'Roboto', sans-serif;
+}
+p {
+  font-family: 'Open Sans', sans-serif;
+  line-height: 0.5;
 }
  .container {
      height: 100%;
@@ -24,14 +29,12 @@ html, body {
  .info-box {
      order: 1;
      flex-grow: 1;
-     background: #C9D7BD;
-     border: 8px solid #F7F6F7;
-     border-radius: 3px;
+     background: #556B2F;
      height: 100%;
      line-height: 35px;
      padding: 10px 10px 30px 10px;
      text-align: left;
-     width: 285px;
+     width: 300px;
 }
  #searchInAreaText, #filter {
      width: 200px;
@@ -40,8 +43,9 @@ html, body {
  .inline {
      display: inline;
 }
- h4 {
-     line-height: normal;
+  h1,h2, h3, h4 {
+     line-height: 1;
+     color: #ffffff;
 }
  #weather {
      font-size: 9px;
@@ -61,29 +65,35 @@ html, body {
      padding-left: 0px;
 }
  li {
-     font-size: 14px;
-     text-transform: uppercase;
+     font-size: 17px;
      font-weight: bold;
 }
+
+#hover:hover {
+  cursor: pointer;
+  background-color: #6B8E23;
+}
  #list {
-     cursor: pointer;
      border-bottom: 1px solid #6B8E23;
+     margin: 1px;
 }
- #list:hover {
-     background-color: #6B8E23;
-}
+
  @media only screen and (max-device-width : 700px), only screen and (max-width : 700px){
      .info-box {
-         width: 92%;
-         height: 40%;
+         width: 100%;
+         height: 50%;
          overflow: scroll;
+    }
+    #resultList {
+        width: 90%;
+        height: 40%;
     }
      #map {
          bottom:0px;
-         height: 50%;
+         height: 45%;
+         width: 100%;
          left: 0px;
          position: absolute;
          right: 0px;
     }
 }
- 
